--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Welcome to CodeMonk. A blog for coding enthusiasts">
+    <meta name="google-site-verification" content="kv8Ie-mMjtwiFF56zqxZNFeMPr4Eyp9bb2Manvq3sME" />
     
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
